--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ uvicorn = "^0.11.5"
 python-dotenv = "^0.13.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^5.4.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
